tests/samples/negative/types/array_return.ax
module array_return;

fn bad() -> [4]u8 {
    return 0;
}

fn main() -> i32 {
    return 0;
}
